--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/inu"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -28,7 +28,7 @@
         <activity
             android:name="com.wegoup.pdr.PdrActivity"
             android:exported="false"
-            android:label="@string/title_activity_pdr"
+            android:label="title_activity_pdr"
             android:theme="@style/Theme.Try_kml" />
         <activity
             android:name="com.wegoup.incheon_univ_map.MainActivity"
